@@ -1,3 +1,6 @@
+cvs
+	- Fall back to BLKGETSIZE if BLKGETSIZE64 fails
+
 xfsprogs-2.0.0 (26 February 2002)
 	- Major release to coincide with switch to new extended
 	  attributes system call interfaces
